k8s/manifests-f0b387/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-f0b387
  namespace: journee
  labels:
    app: journee-f0b387
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-f0b387
  template:
    metadata:
      labels:
        app: journee-f0b387
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-f0b387
          image: gcr.io/my-docker-471807/journee:v7.0.0
          ports:
            - containerPort: 3000
