k8s/manifests-f0b387/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-f0b387
  namespace: journee
spec:
  selector:
    app: journee-f0b387
  ports:
    - port: 80
      targetPort: 3000
